# FasterTransformer

./: CMakeLists.txt  README.md
examples/pytorch/gptj/utils/: huggingface_gptj_ckpt_convert.py
examples/pytorch/llama/: huggingface_llama_ckpt_convert.py
examples/pytorch/t5/utils/: huggingface_t5_ckpt_convert.py
src/fastertransformer/layers/attention_layers/: LlamaContextAttentionLayer.cc  LlamaContextAttentionLayer.h  TensorParallelLlamaContextAttentionLayer.cc  TensorParallelLlamaContextAttentionLayer.h
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/llama/: Llama.cc  Llama.h  LlamaContextDecoder.cc  LlamaContextDecoder.h  LlamaDecoder.cc  LlamaDecoder.h  LlamaDecoderLayerWeight.cc  LlamaDecoderLayerWeight.h  LlamaWeight.cc  LlamaWeight.h
src/fastertransformer/models/multi_gpu_llama/: CMakeLists.txt  ParallelLlama.cc  ParallelLlama.h  ParallelLlamaContextDecoder.cc  ParallelLlamaContextDecoder.h  ParallelLlamaDecoder.cc  ParallelLlamaDecoder.h  ParallelLlamaDecoderLayerWeight.cc  ParallelLlamaDecoderLayerWeight.h  ParallelLlamaWeight.cc  ParallelLlamaWeight.h  llama_gemm.cc
src/fastertransformer/triton_backend/: CMakeLists.txt  transformer_triton_backend.hpp
src/fastertransformer/triton_backend/llama/: CMakeLists.txt  LlamaTritonModel.cc  LlamaTritonModel.h  LlamaTritonModelInstance.cc  LlamaTritonModelInstance.h
src/fastertransformer/triton_backend/multi_gpu_llama/: CMakeLists.txt  ParallelLlamaTritonModel.cc  ParallelLlamaTritonModel.h  ParallelLlamaTritonModelInstance.cc  ParallelLlamaTritonModelInstance.h
src/fastertransformer/utils/gemm_test/: gpt_gemm_func.cc  llama_gemm_func.cc  llama_gemm_func.h
